Fixing calendar spacing.

--- a/timely/static/style/base.css
+++ b/timely/static/style/base.css
@@ -251,3 +251,7 @@ hr {
     max-height: 75vh;
     min-height: 75vh;
 }
+
+.calendar-uncompleted .pill-row:last-child {
+    margin-bottom: 4px;
+}
